# 12go-description-scraper

./: app.py  dockerfile  pyproject.toml
